--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -53,6 +53,9 @@ $lightbg: lighten(#222, 10%);
 .panel-title {
 	padding-bottom: 20px;
 	color: white;
+	font-size: 25px;
+	text-align: center;
+	font-weight: normal;
 
 }
 
@@ -90,3 +93,11 @@ $lightbg: lighten(#222, 10%);
 	background-color: $lightbg;
 }
 
+.hasimage {
+	background-image: url("../images/greytransp.png");
+	border-radius: 7px;
+}
+
+ul {
+	width: 100%;
+}
