--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,8 @@
 <div class="container-fluid" id="map-canvas">
 </div>
 
-<div class="container panel hasimage">
-	<div class="row panel-default">
+<div class="container panel hasimage ui-widget-content" id="draggable">
+	<div class="row panel1 panel-default col-lg-12 col-md-12 col-sm-5 col-xs-5">
 		<div class="panel-body">
 			<ul>
 				<li>Hotels:
@@ -54,8 +54,7 @@
 	</div>
 
 
-
-	<div class="row panel-default">
+	<div class="row panel2 panel-default col-lg-12 col-md-12 col-sm-6 col-xs-6">
 		<div class="panel-heading">
 			<div class="panel-title">
 				Day 1 <button type="button" class="btn btn-xs btn-default btn-danger" id="removeDay1">
