--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -16,30 +16,25 @@ $lightbg: lighten(#222, 10%);
 	}
 }
 
-.panel {
-	float: right;
-	width: 400px;
-	position: absolute;
-	background-color: transparent;
-	top: 110px;
-	right:0px;
 
+@media(min-width: 992px){
+	.panel {
+		float: right;
+		width: 400px;
+		position: absolute;
+		background-color: transparent;
+		top: 110px;
+		right:0px;
+
+	}
+	.bottom-panel{
+		max-height: 320px;
+		overflow: scroll;
+	}
 }
 
 .row {
 	display: block;
-
-	&.panel1{
-		background-color: red;
-		margin-bottom: 40px;
-	}
-
-	&.panel2{
-
-		background-color: blue;
-		margin-bottom: 40px;
-	}
-
 	ul {
 		padding-left: 0;
 		list-style-type: none;
@@ -70,11 +65,6 @@ $lightbg: lighten(#222, 10%);
 	}
 }
 
-.bottom-panel{
-	max-height: 320px;
-	overflow: scroll;
-}
-
 .pagination {
 	margin-bottom: 0px;
 	margin-top: 0px;
@@ -85,8 +75,70 @@ $lightbg: lighten(#222, 10%);
 }
 
 
-@media(max-width: 768){
+@media(max-width: 991px){
+	.panel{
+		width: 100%;
+		background-color: transparent;
+		bottom: 0px;
+		position: fixed;
+	}
+	.row{
+		display:inline;
+		ul {
+			padding-left: 0;
+			list-style-type: none;
+			display: inline-block;
+			li{
+				padding-bottom: 10px;
+			}
+		}
+	}
+	.bottom-panel{
+		max-height: 165px;
+		overflow: scroll;
+	}
+	.panel-title {
+		padding-bottom: 5px;
+		color: white;
+		font-size: 20px;
+		text-align: center;
+		font-weight: normal;
+		float:left;
+	}
 
+	.panel-heading {
+		overflow:hidden;
+	}
+
+	.pagination {
+		margin-bottom: 0px;
+		margin-top: 0px;
+		float:right;
+	}
+
+	.panel-default {
+		border-radius:5px;
+		position: relative;
+		margin: 10px 0;
+		padding: 0 0;
+		opacity: 1;
+		background-color: #e0e0e0;
+		.panel-heading {
+			background-color: #222;
+		}
+	}
+
+	.panel1{
+		float:left;
+	}
+	.panel2{
+		float:right;
+	}
+
+	h4{
+		font-weight: bold;
+		font-size: 16px;
+	}
 }
 
 .active {
@@ -100,4 +152,12 @@ $lightbg: lighten(#222, 10%);
 
 .fullwidth {
 	width: 100%;
+}
+
+.col-lg-12 {
+	padding: 0px;
+}
+
+.col-md-12 {
+	padding: 0px;
 }
