--- a/views/layout.html
+++ b/views/layout.html
@@ -44,6 +44,7 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArytbvdFn_x7yzjjDVAUqKpWsxc0_pJXQ&sensor=true"></script>
 	<script src="jquery/dist/jquery.min.js"></script>
 	<script src="javascripts/scripts.js"></script>
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
   </body>
 </html>
